# hate-detector

./: .gitignore  cli.py  convert_model.ipynb  pyproject.toml  readme.md
hate/: __init__.py  client.py  config.py  model.py  tokenizer.py  tools.py
hate/model/: config.pkl
server/: serve.sh
test/: input.txt  inputs.csv  output.txt
