[tool.poetry]
name = "hate-detector"
version = "0.1.0"
description = "Production-ready toxicity detection system."
authors = ["malyvsen <5940672+malyvsen@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.6"
tensorflow = "^2.2.0"
tqdm = "^4.47.0"
numpy = "^1.19.0"
transformers = "^3.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
